--- a/testapi/Dockerfile
+++ b/testapi/Dockerfile
@@ -1,22 +1,16 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
-COPY ["testapi/testapi.csproj", "testapi/"]
-RUN dotnet restore "testapi/testapi.csproj"
-COPY . .
-WORKDIR "/src/testapi"
-RUN dotnet build "testapi.csproj" -c Release -o /app/build
 
-FROM build AS publish
-RUN dotnet publish "testapi.csproj" -c Release -o /app/publish /p:UseAppHost=false
+COPY *.csproj .
 
-FROM base AS final
+RUN dotnet restore
+
+COPY . ./
+
+RUN dotnet publish --no-restore -c Release -o out
+
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "testapi.dll"]
